// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> Should render App with all props and authentication NOT enabled 1`] = `
<DocumentFragment>
  FetchProviderCmpt : 
  <div
    class="af-header"
  >
    <div
      class="container af-header__wrapper"
    >
      <header
        class="af-header__content"
        role="banner"
      >
        <div
          class="af-header__name af-header__name--slash"
        >
          <a
            class="af-logo"
            href="/"
          >
            <img
              alt="Toolkit React Starter"
              class="af-logo__brand"
              src="slash-logo.svg"
            />
          </a>
          <h2
            class="af-header__title"
          >
            Toolkit React Starter
            <span
              class="af-header__subtitle"
            >
              by Slash Design System
            </span>
          </h2>
        </div>
        <div
          class="af-info-user"
        >
          <a
            class="af-info-user__link"
            href="#"
            title="Voir mon profil"
          >
            <span
              class="af-info-user__name"
            >
              John Doe
            </span>
            <span
              class="af-info-user__profile"
            >
              [Admin]
            </span>
          </a>
        </div>
      </header>
    </div>
  </div>
  <section
    class="af-menu"
  >
    <div
      class="af-nav-container"
    >
      <button
        aria-controls="mainmenu"
        aria-haspopup="true"
        class="mask fade "
        id="togglemenu"
        type="button"
      />
      <nav
        aria-label="Menu principal"
        class="af-nav af-drawer left "
        role="navigation"
      >
        <div
          class="container af-nav__wrapper"
        >
          <div
            class="af-nav__aside-header"
          >
            <h4
              class="af-nav__aside-title"
            >
              Menu
            </h4>
            <button
              aria-controls="mainmenu"
              aria-haspopup="true"
              class="af-nav__aside-close"
              id="togglemenu"
              type="button"
            >
              ×
            </button>
          </div>
          <ul
            aria-labelledby="togglemenu"
            class="af-nav__list "
            id="mainmenu"
            role="menubar"
          >
            <li
              class="af-nav__item af-nav__item--active "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Accueil"
                class="af-nav__link"
                href="/"
                role="menuitem"
                tabindex="0"
              >
                Accueil
              </a>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Démos"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Démos
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Membres"
                    class="af-nav__link"
                    href="/demos/members"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Membres
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Rechercher"
                    class="af-nav__link"
                    href="/demos/search-members"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Rechercher
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Modal"
                    class="af-nav__link"
                    href="/demos/modal"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Modal
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Notification"
                    class="af-nav__link"
                    href="/demos/notification"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Notification
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toolkit components"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Toolkit components
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Button"
                    class="af-nav__link"
                    href="/demos/button"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Button
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Alert"
                    class="af-nav__link"
                    href="/demos/alert"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Alert
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Restitution"
                    class="af-nav__link"
                    href="/demos/restitution"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Restitution
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Tabs"
                    class="af-nav__link"
                    href="/demos/tabs"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Tabs
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toolkit form components"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Toolkit form components
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Text Input"
                    class="af-nav__link"
                    href="/demos/text-input"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Text Input
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Radio Input"
                    class="af-nav__link"
                    href="/demos/radio-input"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Radio Input
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Select Input"
                    class="af-nav__link"
                    href="/demos/select-input"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Select Input
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <span
                aria-expanded="false"
                class="af-nav__link"
                role="menuitem"
                tabindex="-1"
              >
                Pages
              </span>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Not found"
                    class="af-nav__link"
                    href="/notfound"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Not found
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Forbidden"
                    class="af-nav__link"
                    href="/forbidden"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Forbidden
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Layout"
                class="af-nav__link"
                href="/layout"
                role="menuitem"
                tabindex="-1"
              >
                Layout
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </div>
  </section>
  <a
    aria-controls="mainmenu"
    aria-haspopup="true"
    class="btn af-title-bar__mobile-menu af-btn--circle"
    href="#"
    id="opentogglemenu"
    role="button"
    tabindex="0"
    title="Open toggle menu"
  >
    <i
      class="glyphicon glyphicon-menu-hamburger"
    />
  </a>
  <div
    class="af-title-bar"
  >
    <div
      class="container af-title-bar__wrapper"
    >
      <h1
        class="af-title-bar__title"
      >
        Accueil
      </h1>
    </div>
  </div>
  <main
    class="af-main"
  >
    <section
      class="container"
    >
      <h1
        class="af-title--content"
      >
        Bienvenue sur la démo du starter Slash Design System
      </h1>
    </section>
  </main>
  <footer
    class="af-footer"
  >
    <div
      class="container-fluid container"
    >
      <a
        class="af-logo"
        href="https://www.axa.fr/"
        target="blank"
        title="Site Axa"
      >
        <img
          alt="Logo Axa"
          class="af-logo__brand"
          src="logo-axa.svg"
        />
      </a>
      <div
        class="af-footer-content"
      >
        © 2022 AXA Tous droits réservés - v0.2.11
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`<App/> Should render App with all props and authentication enabled 1`] = `
<DocumentFragment>
  OidcProviderCmpt : OidcSecureCmpt : FetchProviderCmpt : 
  <div
    class="af-header"
  >
    <div
      class="container af-header__wrapper"
    >
      <header
        class="af-header__content"
        role="banner"
      >
        <div
          class="af-header__name af-header__name--slash"
        >
          <a
            class="af-logo"
            href="/"
          >
            <img
              alt="Toolkit React Starter"
              class="af-logo__brand"
              src="slash-logo.svg"
            />
          </a>
          <h2
            class="af-header__title"
          >
            Toolkit React Starter
            <span
              class="af-header__subtitle"
            >
              by Slash Design System
            </span>
          </h2>
        </div>
        <div
          class="af-info-user"
        >
          <a
            class="af-info-user__link"
            href="#"
            title="Voir mon profil"
          >
            <span
              class="af-info-user__name"
            >
              Samuel Gomez
            </span>
            <span
              class="af-info-user__profile"
            >
              [inconnu]
            </span>
          </a>
        </div>
      </header>
    </div>
  </div>
  <section
    class="af-menu"
  >
    <div
      class="af-nav-container"
    >
      <button
        aria-controls="mainmenu"
        aria-haspopup="true"
        class="mask fade "
        id="togglemenu"
        type="button"
      />
      <nav
        aria-label="Menu principal"
        class="af-nav af-drawer left "
        role="navigation"
      >
        <div
          class="container af-nav__wrapper"
        >
          <div
            class="af-nav__aside-header"
          >
            <h4
              class="af-nav__aside-title"
            >
              Menu
            </h4>
            <button
              aria-controls="mainmenu"
              aria-haspopup="true"
              class="af-nav__aside-close"
              id="togglemenu"
              type="button"
            >
              ×
            </button>
          </div>
          <ul
            aria-labelledby="togglemenu"
            class="af-nav__list "
            id="mainmenu"
            role="menubar"
          >
            <li
              class="af-nav__item af-nav__item--active "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Accueil"
                class="af-nav__link"
                href="/"
                role="menuitem"
                tabindex="0"
              >
                Accueil
              </a>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Démos"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Démos
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Membres"
                    class="af-nav__link"
                    href="/demos/members"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Membres
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Rechercher"
                    class="af-nav__link"
                    href="/demos/search-members"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Rechercher
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Modal"
                    class="af-nav__link"
                    href="/demos/modal"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Modal
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Notification"
                    class="af-nav__link"
                    href="/demos/notification"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Notification
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toolkit components"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Toolkit components
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Button"
                    class="af-nav__link"
                    href="/demos/button"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Button
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Alert"
                    class="af-nav__link"
                    href="/demos/alert"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Alert
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Restitution"
                    class="af-nav__link"
                    href="/demos/restitution"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Restitution
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Tabs"
                    class="af-nav__link"
                    href="/demos/tabs"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Tabs
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toolkit form components"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Toolkit form components
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Text Input"
                    class="af-nav__link"
                    href="/demos/text-input"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Text Input
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Radio Input"
                    class="af-nav__link"
                    href="/demos/radio-input"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Radio Input
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Select Input"
                    class="af-nav__link"
                    href="/demos/select-input"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Select Input
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <span
                aria-expanded="false"
                class="af-nav__link"
                role="menuitem"
                tabindex="-1"
              >
                Pages
              </span>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Not found"
                    class="af-nav__link"
                    href="/notfound"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Not found
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Forbidden"
                    class="af-nav__link"
                    href="/forbidden"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Forbidden
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Layout"
                class="af-nav__link"
                href="/layout"
                role="menuitem"
                tabindex="-1"
              >
                Layout
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </div>
  </section>
  <a
    aria-controls="mainmenu"
    aria-haspopup="true"
    class="btn af-title-bar__mobile-menu af-btn--circle"
    href="#"
    id="opentogglemenu"
    role="button"
    tabindex="0"
    title="Open toggle menu"
  >
    <i
      class="glyphicon glyphicon-menu-hamburger"
    />
  </a>
  <div
    class="af-title-bar"
  >
    <div
      class="container af-title-bar__wrapper"
    >
      <h1
        class="af-title-bar__title"
      >
        Accueil
      </h1>
    </div>
  </div>
  <main
    class="af-main"
  >
    <section
      class="container"
    >
      <h1
        class="af-title--content"
      >
        Bienvenue sur la démo du starter Slash Design System
      </h1>
    </section>
  </main>
  <footer
    class="af-footer"
  >
    <div
      class="container-fluid container"
    >
      <a
        class="af-logo"
        href="https://www.axa.fr/"
        target="blank"
        title="Site Axa"
      >
        <img
          alt="Logo Axa"
          class="af-logo__brand"
          src="logo-axa.svg"
        />
      </a>
      <div
        class="af-footer-content"
      >
        © 2022 AXA Tous droits réservés - v0.2.11
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`<App/> Should render App with default props 1`] = `
<DocumentFragment>
  <span
    class="oidc-loading"
  >
    Loading
  </span>
</DocumentFragment>
`;
